## -*- mode: makefile -*-

ACLOCAL_AMFLAGS = -I etc/m4

SUBDIRS = external/glad

include $(top_srcdir)/Makefile.common

if DARWIN
include $(top_srcdir)/Makefile.darwin
endif

if LINUX
include $(top_srcdir)/Makefile.linux
endif

bin_PROGRAMS = fs2

fs2_SOURCES =                                   \
    ai/ai.cpp                                   \
    ai/ai_profiles.cpp                          \
    ai/aibig.cpp                                \
    ai/aicode.cpp                               \
    ai/aigoals.cpp                              \
    ai/aiturret.cpp                             \
    anim/animplay.cpp                           \
    anim/packunpack.cpp                         \
    assert/assert.cpp                           \
    asteroid/asteroid.cpp                       \
    autopilot/autopilot.cpp                     \
    bmpman/bm_examples.cpp                      \
    bmpman/bmpman.cpp                           \
    camera/camera.cpp                           \
    cfile/cfile.cpp                             \
    cfile/cfilearchive.cpp                      \
    cfile/cfilelist.cpp                         \
    cfile/cfilesystem.cpp                       \
    cmdline/cmdline.cpp                         \
    cmeasure/cmeasure.cpp                       \
    controlconfig/controlsconfig.cpp            \
    controlconfig/controlsconfigcommon.cpp      \
    cutscene/Decoder.cpp                        \
    cutscene/VideoPresenter.cpp                 \
    cutscene/cutscenes.cpp                      \
    cutscene/ffmpeg/AudioDecoder.cpp            \
    cutscene/ffmpeg/FFMPEGDecoder.cpp           \
    cutscene/ffmpeg/SubtitleDecoder.cpp         \
    cutscene/ffmpeg/VideoDecoder.cpp            \
    cutscene/ffmpeg/internal.cpp                \
    cutscene/movie.cpp                          \
    cutscene/player.cpp                         \
    ddsutils/ddsutils.cpp                       \
    debris/debris.cpp                           \
    debugconsole/console.cpp                    \
    debugconsole/consolecmds.cpp                \
    debugconsole/consoleparse.cpp               \
    decals/decals.cpp                           \
    events/events.cpp                           \
    fireball/fireballs.cpp                      \
    fireball/warpineffect.cpp                   \
    freespace2/SDLGraphicsOperations.cpp        \
    freespace2/freespace.cpp                    \
    freespace2/levelpaging.cpp                  \
    gamehelp/contexthelp.cpp                    \
    gamehelp/gameplayhelp.cpp                   \
    gamesequence/gamesequence.cpp               \
    gamesnd/eventmusic.cpp                      \
    gamesnd/gamesnd.cpp                         \
    globalincs/alphacolors.cpp                  \
	globalincs/systemvars.cpp                   \
    globalincs/version.cpp                      \
    graphics/2d.cpp                             \
    graphics/decal_draw_list.cpp                \
    graphics/generic.cpp                        \
    graphics/grbatch.cpp                        \
    graphics/grstub.cpp                         \
    graphics/light.cpp                          \
    graphics/line_draw_list.cpp                 \
    graphics/material.cpp                       \
    graphics/matrix.cpp                         \
    graphics/opengl/ShaderProgram.cpp           \
    graphics/opengl/gropengl.cpp                \
    graphics/opengl/gropenglbmpman.cpp          \
    graphics/opengl/gropengldeferred.cpp        \
    graphics/opengl/gropengldraw.cpp            \
    graphics/opengl/gropenglpostprocessing.cpp  \
    graphics/opengl/gropenglquery.cpp           \
    graphics/opengl/gropenglshader.cpp          \
    graphics/opengl/gropenglstate.cpp           \
    graphics/opengl/gropenglsync.cpp            \
    graphics/opengl/gropengltexture.cpp         \
    graphics/opengl/gropengltnl.cpp             \
    graphics/paths/NanoVGRenderer.cpp           \
    graphics/paths/PathRenderer.cpp             \
    graphics/paths/nanovg/nanovg.c              \
    graphics/render.cpp                         \
    graphics/shadows.cpp                        \
    graphics/software/FSFont.cpp                \
    graphics/software/FontManager.cpp           \
    graphics/software/NVGFont.cpp               \
    graphics/software/VFNTFont.cpp              \
    graphics/software/font.cpp                  \
    graphics/uniforms.cpp                       \
    graphics/util/GPUMemoryHeap.cpp             \
    graphics/util/UniformAligner.cpp            \
    graphics/util/UniformBuffer.cpp             \
    graphics/util/UniformBufferManager.cpp      \
    hud/hud.cpp                                 \
    hud/hudartillery.cpp                        \
    hud/hudbrackets.cpp                         \
    hud/hudconfig.cpp                           \
    hud/hudescort.cpp                           \
    hud/hudets.cpp                              \
    hud/hudlock.cpp                             \
    hud/hudmessage.cpp                          \
    hud/hudnavigation.cpp                       \
    hud/hudobserver.cpp                         \
    hud/hudparse.cpp                            \
    hud/hudreticle.cpp                          \
    hud/hudshield.cpp                           \
    hud/hudsquadmsg.cpp                         \
    hud/hudtarget.cpp                           \
    hud/hudtargetbox.cpp                        \
    hud/hudwingmanstatus.cpp                    \
    iff_defs/iff_defs.cpp                       \
	io/cursor.cpp                               \
    io/joy-sdl.cpp                              \
    io/joy_ff-sdl.cpp                           \
    io/key.cpp                                  \
    io/keycontrol.cpp                           \
    io/mouse.cpp                                \
    io/timer.cpp                                \
    jpgutils/jpgutils.cpp                       \
    jumpnode/jumpnode.cpp                       \
    lab/lab.cpp                                 \
    lab/wmcgui.cpp                              \
    libs/ffmpeg/FFmpeg.cpp                      \
    libs/ffmpeg/FFmpegContext.cpp               \
    libs/renderdoc/renderdoc.cpp                \
    lighting/lighting.cpp                       \
    localization/fhash.cpp                      \
    localization/localize.cpp                   \
    log/log.cpp                                 \
	math/floating.cpp                           \
    math/fvi.cpp                                \
    math/spline.cpp                             \
    math/staticrand.cpp                         \
    math/vecmat.cpp                             \
    menuui/barracks.cpp                         \
    menuui/credits.cpp                          \
    menuui/fishtank.cpp                         \
    menuui/mainhallmenu.cpp                     \
    menuui/mainhalltemp.cpp                     \
    menuui/optionsmenu.cpp                      \
    menuui/playermenu.cpp                       \
    menuui/readyroom.cpp                        \
    menuui/snazzyui.cpp                         \
    menuui/techmenu.cpp                         \
    menuui/trainingmenu.cpp                     \
    mission/missionbriefcommon.cpp              \
    mission/missioncampaign.cpp                 \
    mission/missiongoals.cpp                    \
    mission/missiongrid.cpp                     \
    mission/missionhotkey.cpp                   \
    mission/missionload.cpp                     \
    mission/missionlog.cpp                      \
    mission/missionmessage.cpp                  \
    mission/missionparse.cpp                    \
    mission/missiontraining.cpp                 \
    missionui/fictionviewer.cpp                 \
    missionui/missionbrief.cpp                  \
    missionui/missioncmdbrief.cpp               \
    missionui/missiondebrief.cpp                \
    missionui/missionloopbrief.cpp              \
    missionui/missionpause.cpp                  \
    missionui/missionscreencommon.cpp           \
    missionui/missionshipchoice.cpp             \
    missionui/missionweaponchoice.cpp           \
    missionui/redalert.cpp                      \
    mod_table/mod_table.cpp                     \
    model/modelanim.cpp                         \
    model/modelcollide.cpp                      \
    model/modelinterp.cpp                       \
    model/modeloctant.cpp                       \
    model/modelread.cpp                         \
    model/modelrender.cpp                       \
    nebula/neb.cpp                              \
    nebula/neblightning.cpp                     \
    object/collidedebrisship.cpp                \
    object/collidedebrisweapon.cpp              \
    object/collideshipship.cpp                  \
    object/collideshipweapon.cpp                \
    object/collideweaponweapon.cpp              \
    object/deadobjectdock.cpp                   \
    object/objcollide.cpp                       \
    object/object.cpp                           \
    object/objectdock.cpp                       \
    object/objectshield.cpp                     \
    object/objectsnd.cpp                        \
    object/objectsort.cpp                       \
    object/parseobjectdock.cpp                  \
    object/waypoint.cpp                         \
    observer/observer.cpp                       \
    osapi/DebugWindow.cpp                       \
    osapi/osapi.cpp                             \
    osapi/osregistry.cpp                        \
    parse/encrypt.cpp                           \
    parse/parselo.cpp                           \
    parse/sexp.cpp                              \
    particle/ParticleManager.cpp                \
    particle/ParticleSource.cpp                 \
    particle/ParticleSourceWrapper.cpp          \
    particle/effects/BeamPiercingEffect.cpp     \
    particle/effects/CompositeEffect.cpp        \
    particle/effects/ParticleEmitterEffect.cpp  \
    particle/effects/SingleParticleEffect.cpp   \
    particle/particle.cpp                       \
    particle/util/EffectTiming.cpp              \
    particle/util/ParticleProperties.cpp        \
    pcxutils/pcxutils.cpp                       \
    physics/physics.cpp                         \
    pilotfile/csg.cpp                           \
    pilotfile/pilotfile.cpp                     \
    pilotfile/plr.cpp                           \
    playerman/managepilot.cpp                   \
    playerman/playercontrol.cpp                 \
    pngutils/pngutils.cpp                       \
    popup/popup.cpp                             \
    popup/popupdead.cpp                         \
    radar/radar.cpp                             \
    radar/radardradis.cpp                       \
    radar/radarorb.cpp                          \
    radar/radarsetup.cpp                        \
    render/3dclipper.cpp                        \
    render/3ddraw.cpp                           \
    render/3dlaser.cpp                          \
    render/3dmath.cpp                           \
    render/3dsetup.cpp                          \
    render/batching.cpp                         \
    ship/afterburner.cpp                        \
    ship/awacs.cpp                              \
    ship/shield.cpp                             \
    ship/ship.cpp                               \
    ship/shipcontrails.cpp                      \
    ship/shipfx.cpp                             \
    ship/shiphit.cpp                            \
    sound/audiostr.cpp                          \
    sound/ds.cpp                                \
    sound/ds3d.cpp                              \
    sound/dscap.cpp                             \
    sound/ffmpeg/FFmpegAudioReader.cpp          \
    sound/ffmpeg/WaveFile.cpp                   \
    sound/openal.cpp                            \
    sound/rtvoice.cpp                           \
    sound/sound.cpp                             \
    species_defs/species_defs.cpp               \
    starfield/nebula.cpp                        \
    starfield/starfield.cpp                     \
    starfield/supernova.cpp                     \
    stats/medals.cpp                            \
    stats/scoring.cpp                           \
    stats/stats.cpp                             \
    tgautils/tgautils.cpp                       \
    tracing/FrameProfiler.cpp                   \
    tracing/MainFrameTimer.cpp                  \
    tracing/Monitor.cpp                         \
    tracing/TraceEventWriter.cpp                \
    tracing/categories.cpp                      \
    tracing/scopes.cpp                          \
    tracing/tracing.cpp                         \
    ui/button.cpp                               \
    ui/checkbox.cpp                             \
    ui/gadget.cpp                               \
    ui/icon.cpp                                 \
    ui/inputbox.cpp                             \
    ui/keytrap.cpp                              \
    ui/listbox.cpp                              \
    ui/radio.cpp                                \
    ui/scroll.cpp                               \
    ui/slider.cpp                               \
    ui/slider2.cpp                              \
    ui/uidraw.cpp                               \
    ui/uimouse.cpp                              \
    ui/window.cpp                               \
    util/HeapAllocator.cpp                      \
    util/encoding.cpp                           \
    util/fmt.cpp                                \
    util/unicode.cpp                            \
    weapon/beam.cpp                             \
    weapon/corkscrew.cpp                        \
    weapon/emp.cpp                              \
    weapon/flak.cpp                             \
    weapon/muzzleflash.cpp                      \
    weapon/shockwave.cpp                        \
    weapon/swarm.cpp                            \
    weapon/trails.cpp                           \
	weapon/weapons.cpp

fs2_CPPFLAGS =                                  \
    -DSCP_UNIX                                  \
    -I.                                         \
    $(EXTERNAL_CPPFLAGS)                        \
    $(BOOST_CPPFLAGS)                           \
    $(SDL2_CPPFLAGS)                            \
    $(OPENAL_CPPFLAGS)                          \
    $(FFMPEG_CPPFLAGS)                          \
    $(JSONCPP_CPPFLAGS)                         \
    $(JPEG_CPPFLAGS)                            \
    $(PNG_CPPFLAGS)

fs2_LDADD =                                     \
    $(EXTERNAL_LIBS)                            \
    $(BOOST_LDFLAGS) $(BOOST_LIBS)              \
    $(SDL2_LIBS)                                \
    $(OPENAL_LIBS)                              \
    $(FFMPEG_LIBS)                              \
    $(JSONCPP_LIBS)                             \
    $(LIBJPEG_LIBS)                             \
    $(LIBPNG_LIBS)                              \
    -lstdc++fs -ldl
