# -*- mode: automake -*-

noinst_LIBRARIES = libdiscord.a

libdiscord_a_SOURCES =                          \
    src/connection_unix.cpp                     \
    src/discord_register_osx.m                  \
    src/discord_rpc.cpp                         \
    src/rpc_connection.cpp                      \
    src/serialization.cpp

AM_CPPFLAGS = -I. -Iinclude -Ithirdparty
