# -*- mode: automake; -*-

noinst_LIBRARIES = libjansson.a

libjansson_a_SOURCES =                          \
    dump.c                                      \
    error.c                                     \
    hashtable.c                                 \
    hashtable.h                                 \
    hashtable_seed.c                            \
    jansson_private.h                           \
    load.c                                      \
    lookup3.h                                   \
    memory.c                                    \
    pack_unpack.c                               \
    strbuffer.c                                 \
    strbuffer.h                                 \
    strconv.c                                   \
    utf.c                                       \
    utf.h                                       \
    value.c

libjansson_a_CPPFLAGS = -I.
