# -*- mode: makefile; -*-

ACLOCAL_AMFLAGS = -I etc/m4

noinst_LIBRARIES = liblua51.a

liblua51_a_CPPFLAGS = -DLUA_USE_MACOSX -I. -I..

liblua51_a_SOURCES =                            \
    lapi.c                                      \
    lauxlib.c                                   \
    lbaselib.c                                  \
    lcode.c                                     \
    ldblib.c                                    \
    ldebug.c                                    \
    ldo.c                                       \
    ldump.c                                     \
    lfunc.c                                     \
    lgc.c                                       \
    linit.c                                     \
    liolib.c                                    \
    llex.c                                      \
    lmathlib.c                                  \
    lmem.c                                      \
    loadlib.c                                   \
    lobject.c                                   \
    lopcodes.c                                  \
    loslib.c                                    \
    lparser.c                                   \
    lstate.c                                    \
    lstring.c                                   \
    lstrlib.c                                   \
    ltable.c                                    \
    ltablib.c                                   \
    ltm.c                                       \
    lundump.c                                   \
    lvm.c                                       \
    lzio.c                                      \
    print.c

